<resources>
    <string name="app_name">Ajar.in</string>
    <string name="login">Login</string>
    <string name="type_your_email_address"> Type your email address</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="type_your_password"> Type your password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="register">Register</string>
    <string name="name">Name</string>
    <string name="type_your_name">Type your name</string>
    <string name="phone_number">Phone Number</string>
    <string name="type_your_phone_number">Type your phone number</string>
    <string name="student_tutor">Student/Tutor?</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="orderDetail">Order Detail</string>
    <string name="mataKuliah">Mata Kuliah</string>
    <string name="home_frag">Home</string>
    <string name="history_frag">History</string>
    <string name="profile_frag">Profile</string>
    <string name="home">Topics</string>
    <string name="law">Law</string>
    <string name="business">Business</string>
    <string name="medical">Medical</string>
    <string name="eng">Engineering</string>
    <string name="itdev">IT Development</string>
    <string name="humanities">Humanities</string>
    <string-array name="stutu">
        <item>Student</item>
        <item>Tutor</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="string_orderID">Order ID</string>
    <string name="string_ordStat">Order Status</string>
    <string name="string_ordDate">Order Date</string>
    <string name="subject">Subject</string>
    <string name="string_subName">Subject Name</string>
    <string name="tutorName">Tutor Name</string>
    <string name="string_tutorName">Tutor Name</string>
    <string name="total">Total</string>
    <string name="string_totalPrice">Total Price</string>
    <string name="userName">User Name</string>
    <string name="userPhone">User Phone Num</string>
    <string name="userEmail">userEmail@gmail.com</string>
    <string name="account">Account</string>
    <string name="pandP">Privacy Policy</string>
    <string name="termCond">Term and Conditions</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms_condition"><![CDATA[Terms & Condition]]></string>
    <string name="string_pandp">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam ultrices ullamcorper suscipit. Ut lorem sapien, blandit non ultricies nec, eleifend sit amet nunc. Quisque congue sagittis nisi eu egestas. Cras lobortis tincidunt dui at semper. Duis aliquam augue id pretium ultricies. Fusce condimentum justo ac consequat blandit. Sed hendrerit, dui consectetur porttitor porta, turpis dolor semper purus, non maximus lorem justo sed lectus. Proin congue mi quis sodales dapibus. Mauris tincidunt, odio a molestie viverra, purus sem imperdiet orci, eget mollis dui orci nec dui. Cras efficitur enim non libero feugiat accumsan. Nulla nec quam et metus luctus rutrum. Mauris non purus ut mauris suscipit accumsan. Aenean at bibendum lectus.

        Aenean ullamcorper consectetur ultrices. Mauris mollis commodo est, ut pharetra mauris mattis sit amet. Sed fermentum est nec semper suscipit. Suspendisse rhoncus, felis ac elementum posuere, lacus justo tincidunt libero, in rhoncus nisl felis et nulla. Vivamus quis nunc urna. Nulla id tortor nibh. Nunc ullamcorper ullamcorper aliquet.

        Nunc ornare, dolor lacinia euismod iaculis, lorem libero aliquet dui, vitae pulvinar ante risus in turpis. Fusce euismod efficitur vulputate. Cras aliquam magna lacinia eros pharetra, vitae tempus tellus hendrerit. Mauris nec nisi ut sapien tempor gravida in sed purus. Suspendisse ultricies eu massa vitae convallis. Aliquam vulputate arcu non leo venenatis, nec elementum orci tincidunt. Vestibulum viverra ultricies semper. Maecenas fermentum sodales lacus in congue. Etiam mollis rutrum sollicitudin. Nullam egestas tincidunt lectus, vel rutrum nisl dignissim id. Mauris et posuere lectus. Phasellus luctus venenatis sollicitudin. Curabitur ut dignissim enim. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Integer tortor nisi, cursus et erat ut, finibus fringilla erat. Phasellus vehicula elementum dolor, vel sagittis nisl faucibus vitae.

        Praesent pharetra vehicula purus. Phasellus rhoncus diam quis turpis gravida fringilla. Nulla nec finibus quam, eget dictum ligula. Ut hendrerit molestie tortor, non tincidunt dui efficitur eu. Vestibulum ultricies, tellus sed vehicula tincidunt, libero lectus consectetur ipsum, in tempor enim felis iaculis nisl. Sed sed ipsum egestas, blandit ipsum eu, iaculis urna. Praesent vitae felis tellus. Donec molestie eros ac risus molestie, sit amet accumsan tellus egestas. Quisque sit amet auctor arcu, vel commodo leo. Suspendisse potenti. Integer vel arcu eu eros aliquam cursus. Nulla facilisis hendrerit placerat. Phasellus sit amet mi et metus tincidunt elementum.

        Praesent pharetra vehicula purus. Phasellus rhoncus diam quis turpis gravida fringilla. Nulla nec finibus quam, eget dictum ligula. Ut hendrerit molestie tortor, non tincidunt dui efficitur eu. Vestibulum ultricies, tellus sed vehicula tincidunt, libero lectus consectetur ipsum, in tempor enim felis iaculis nisl. Sed sed ipsum egestas, blandit ipsum eu, iaculis urna. Praesent vitae felis tellus. Donec molestie eros ac risus molestie, sit amet accumsan tellus egestas. Quisque sit amet auctor arcu, vel commodo leo. Suspendisse potenti. Integer vel arcu eu eros aliquam cursus. Nulla facilisis hendrerit placerat. Phasellus sit amet mi et metus tincidunt elementum.
    </string>
    <string name="subj_desc">
        Mempelajari teknik-teknik keamanan dalam jaringan komputer, menganalisis
dan mengimplementasikan aspek keamanan pada jaringan komputer, menganalisa keamanan dan integritas data serta melakukan proteksi.
    </string>
    <string name="rating_tutor">5</string>
    <string name="tutor_list">Tutor List</string>
    <string name="tutor_profile">Tutor Profile</string>
    <string name="prof_tutorName">Tutor Name</string>
    <string name="prof_tutorEmail">tutor.email@gmail.com</string>
    <string name="prof_tutorDesc">Becoming Tutor Since 2021</string>
    <string name="per_session">/ Session</string>
    <string name="review">Reviews</string>
    <string name="contact">Contact</string>

    <string name="txt_appointment">Appointment</string>
    <string name="txt_totalSession">Total session</string>
    <string name="app_session">1</string>
    <string name="fee">Fee</string>

    <string name="detailed_order">Detailed Order</string>
    <string name="status">Status</string>
    <string name="string_status">Success</string>


</resources>