<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/whiteBG"
    tools:context=".Login">

    <ImageView
        android:id="@+id/ellipse1"
        android:layout_width="266dp"
        android:layout_height="266dp"
        android:layout_marginStart="145dp"
        android:layout_marginTop="-100dp"
        android:src="@drawable/ellipse1" />

    <ImageView
        android:id="@+id/ellipse2"
        android:layout_width="240dp"
        android:layout_height="266dp"
        android:layout_marginTop="-70dp"
        android:src="@drawable/ellipse2" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:src="@drawable/logo"
        android:layout_marginTop="15dp"
        android:layout_marginStart="35dp"/>

    <TextView
        android:id="@+id/registertxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ellipse1"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/lato_bold"
        android:text="@string/register"
        android:textSize="30sp"
        android:textColor="#848484"/>

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/registertxt"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="30dp"
        android:fontFamily="@font/lato"
        android:text="@string/name"
        android:textColor="#848484"
        android:textSize="12sp" />

    <EditText
        android:id="@+id/nameinput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/name"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="30dp"
        android:drawableStart="@drawable/ic_person"
        android:hint="@string/type_your_name"
        android:inputType="text" />

    <TextView
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/nameinput"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="30dp"
        android:fontFamily="@font/lato"
        android:text="@string/email_address"
        android:textColor="#848484"
        android:textSize="12sp" />

    <EditText
        android:id="@+id/emailinput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/email"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="30dp"
        android:drawableStart="@drawable/ic_email"
        android:hint="@string/type_your_email_address"
        android:inputType="textEmailAddress" />

    <TextView
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/emailinput"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="30dp"
        android:fontFamily="@font/lato"
        android:text="@string/password"
        android:textColor="#848484"
        android:textSize="12sp" />

    <EditText
        android:id="@+id/passinput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/password"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="30dp"
        android:drawableStart="@drawable/ic_password"
        android:hint="@string/type_your_password"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/phonenumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/passinput"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="30dp"
        android:fontFamily="@font/lato"
        android:text="@string/phone_number"
        android:textColor="#848484"
        android:textSize="12sp" />

    <EditText
        android:id="@+id/phoneinput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/phonenumber"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="30dp"
        android:drawableStart="@drawable/ic_phone"
        android:hint="@string/type_your_phone_number"
        android:inputType="phone" />

    <TextView
        android:id="@+id/stuortu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/phoneinput"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="30dp"
        android:fontFamily="@font/lato"
        android:text="@string/student_tutor"
        android:textColor="#848484"
        android:textSize="12sp" />

    <Spinner
        android:id="@+id/stuortuin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/stuortu"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="30dp"
        android:entries="@array/stutu" />

    <ImageButton
        android:id="@+id/registerbutton"
        android:layout_width="275dp"
        android:layout_height="58dp"
        android:layout_below="@id/stuortuin"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/ic_registerbutton" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/registerbutton"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/already"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="1dp"
            android:fontFamily="@font/lato"
            android:text="@string/already_have_an_account"
            android:textSize="12sp"/>

        <TextView
            android:id="@+id/loginbtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lato_bold"
            android:text="@string/login"
            android:clickable="true"
            android:focusable="true"
            android:textSize="12sp"/>
    </LinearLayout>


</RelativeLayout>