<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">

    <ImageView
        android:id="@+id/ellipse1"
        android:layout_width="266dp"
        android:layout_height="266dp"
        android:layout_marginStart="145dp"
        android:layout_marginTop="-100dp"
        android:src="@drawable/ellipse1" />

    <ImageView
        android:id="@+id/ellipse2"
        android:layout_width="240dp"
        android:layout_height="266dp"
        android:layout_marginTop="-70dp"
        android:src="@drawable/ellipse2" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:src="@drawable/logo"
        android:layout_marginTop="15dp"
        android:layout_marginStart="35dp"/>

    <TextView
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ellipse1"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/lato_bold"
        android:text="@string/login"
        android:textSize="30sp"
        android:textColor="#848484"/>

    <TextView
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/login"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="30dp"
        android:fontFamily="@font/lato"
        android:text="@string/email_address"
        android:textColor="#848484"
        android:textSize="12sp" />

    <EditText
        android:id="@+id/emailinput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/email"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="30dp"
        android:drawableStart="@drawable/ic_email"
        android:hint="@string/type_your_email_address"
        android:inputType="textEmailAddress" />

    <TextView
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/emailinput"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="30dp"
        android:fontFamily="@font/lato"
        android:text="@string/password"
        android:textColor="#848484"
        android:textSize="12sp" />

    <EditText
        android:id="@+id/passinput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/password"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="30dp"
        android:drawableStart="@drawable/ic_password"
        android:hint="@string/type_your_password"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/forgot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/passinput"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:fontFamily="@font/lato_bold"
        android:text="@string/forgot_password"
        android:textAlignment="textEnd"
        android:clickable="true"
        android:focusable="true" />

    <ImageButton
        android:id="@+id/loginbutton"
        android:layout_width="275dp"
        android:layout_height="58dp"
        android:layout_below="@id/forgot"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/ic_loginbutton" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/loginbutton"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
        android:id="@+id/donthave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="1dp"
        android:fontFamily="@font/lato"
        android:text="@string/don_t_have_an_account"/>

        <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/lato_bold"
        android:text="@string/register"
        android:clickable="true"
        android:focusable="true" />
    </LinearLayout>


</RelativeLayout>